Switched ipynb to python 2

--- a/planar_arms/figure_6.ipynb
+++ b/planar_arms/figure_6.ipynb
@@ -154,7 +154,7 @@
     "for nor_data, src_data, tgt_data in data_min_tgt:\n",
     "    figs.append(spread(src_data))\n",
     "    figs.append(spread(tgt_data))\n",
-    "graphs.show(figs)"
+    "fig = graphs.show([figs])"
    ]
   },
   {
@@ -244,12 +244,26 @@
    },
    "outputs": [],
    "source": [
+    "def _reused_commands(explorations):\n",
+    "    expls = []\n",
+    "    for expl in explorations:\n",
+    "        if 'ReuseExplorer' == expl[0]['from']:\n",
+    "            expls.append(expl)\n",
+    "    return expls\n",
+    "\n",
     "for nor_data, src_data, tgt_data in data_min_tgt:\n",
     "    env_cfg = tgt_data.job.jobcfg.exploration.env\n",
     "    env = environments.Environment.create(env_cfg)\n",
     "\n",
-    "    reused_commands = tgt_data['explorations'][:50]\n",
+    "    reused_commands = _reused_commands(tgt_data['explorations'])#[:50]\n",
     "    arm_examples(env, reused_commands)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
    ]
   }
  ],
@@ -269,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
