--- a/planar_arms/figure_7.ipynb
+++ b/planar_arms/figure_7.ipynb
@@ -28,6 +28,7 @@
     "\n",
     "import scipy.stats\n",
     "from bokeh import plotting\n",
+    "import pyprind # progress bars\n",
     "\n",
     "import explorers\n",
     "import environments\n",
@@ -47,7 +48,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -71,7 +72,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -79,9 +80,11 @@
     "def compute_diversities(s_vectors1, s_vectors2):\n",
     "    \"\"\"Compute the diversity of random subsets of the sensory vectors\"\"\"\n",
     "    divs = []\n",
+    "    progress_bar = pyprind.ProgBar(M-1)\n",
     "\n",
     "    assert len(s_vectors1) == len(s_vectors2)\n",
     "\n",
+    "    \n",
     "    for k in range(1, M, 1):\n",
     "        for _ in range(1):\n",
     "            pop_idx = random.sample(range(len(s_vectors1)), k)\n",
@@ -91,7 +94,8 @@
     "            div1 = factored.run_coverage(0.05, pop1)\n",
     "            div2 = factored.run_coverage(0.05, pop2)\n",
     "            divs.append((div1, div2))\n",
-    "\n",
+    "        progress_bar.update()\n",
+    "            \n",
     "    return divs\n",
     "\n",
     "divs = compute_diversities(s_vectors1, s_vectors2)"
@@ -147,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
