--- a/planar_arms/figure_4.ipynb
+++ b/planar_arms/figure_4.ipynb
@@ -295,8 +295,10 @@
     "        \n",
     "reused = reused_commands(tgt_ex.cfg.ex_2, tgt_explorations)\n",
     "\n",
-    "reused_src_s_vectors = [tools.to_vector(src_env.execute(r[0]['m_signal'])['s_signal'], src_env.s_channels) for r in reused]\n",
-    "reused_tgt_s_vectors = [tools.to_vector(tgt_env.execute(r[0]['m_signal'])['s_signal'], tgt_env.s_channels) for r in reused]"
+    "reused_src_s_vectors = [tools.to_vector(src_env.execute(r[0]['m_signal'])['s_signal'], src_env.s_channels) \n",
+    "                        for r in reused]\n",
+    "reused_tgt_s_vectors = [tools.to_vector(tgt_env.execute(r[0]['m_signal'])['s_signal'], tgt_env.s_channels) \n",
+    "                        for r in reused]"
    ]
   },
   {
@@ -312,7 +314,8 @@
     "                              e_radius=1.5, e_alpha=0.5, title='first arm - {} steps'.format(N))\n",
     "graphs.spread(src_env.s_channels, s_vectors=reused_src_s_vectors, fig=selection_fig,\n",
     "              e_color='#FF030D', e_radius=2.0, e_alpha=1.0, title='first arm - {} steps'.format(N))\n",
-    "graphs.display_grid(selection_fig, x_range=[-1.0, 1.0], y_range=[-1.0, 1.0], div_x=RES, div_y=RES, color='#666666', alpha=0.5)\n",
+    "graphs.display_grid(selection_fig, x_range=[-1.0, 1.0], y_range=[-1.0, 1.0], \n",
+    "                    div_x=RES, div_y=RES, color='#666666', alpha=0.5)\n",
     "\n",
     "graphs.show(selection_fig)"
    ]
@@ -446,7 +449,8 @@
    "outputs": [],
    "source": [
     "# no reuse graphs\n",
-    "nor_fig = graphs.posture_explorations(tgt_env, nor_explorations[:50], alpha=0.50, radius_factor=0.75, plot_width=490, plot_height=490, \n",
+    "nor_fig = graphs.posture_explorations(tgt_env, nor_explorations[:50], alpha=0.50, radius_factor=0.75, \n",
+    "                                      plot_width=490, plot_height=490, \n",
     "                                      title='{} random motor commands'.format(len(reused)))\n",
     "\n",
     "graphs.show(nor_fig)"
@@ -493,21 +497,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
