Add provenance code to planar arms ipynb

--- a/planar_arms/figure_4.ipynb
+++ b/planar_arms/figure_4.ipynb
@@ -487,6 +487,25 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Provenance Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import provenance\n",
+    "provenance.planar_arms()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
