--- a/planar_arms/figure_6.ipynb
+++ b/planar_arms/figure_6.ipynb
@@ -263,6 +263,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Provenance Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import provenance\n",
+    "provenance.planar_arms()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " "
    ]
   }
