Better provenance code

--- a/planar_arms/figure_6.ipynb
+++ b/planar_arms/figure_6.ipynb
@@ -275,7 +275,8 @@
    "outputs": [],
    "source": [
     "import provenance\n",
-    "provenance.planar_arms()"
+    "prov_data = provenance.planar_arms()\n",
+    "print(prov_data.message())"
    ]
   },
   {
