--- a/planar_arms/figure_4.ipynb
+++ b/planar_arms/figure_4.ipynb
@@ -501,7 +501,8 @@
    "outputs": [],
    "source": [
     "import provenance\n",
-    "provenance.planar_arms()"
+    "prov_data = provenance.planar_arms()\n",
+    "print(prov_data.message())"
    ]
   },
   {
