--- a/planar_arms/figure_7.ipynb
+++ b/planar_arms/figure_7.ipynb
@@ -143,7 +143,8 @@
    "outputs": [],
    "source": [
     "import provenance\n",
-    "provenance.planar_arms()"
+    "prov_data = provenance.planar_arms()\n",
+    "print(prov_data.message())"
    ]
   },
   {
