Adjust graphs presentation for figure 6

--- a/planar_arms/figure_6.ipynb
+++ b/planar_arms/figure_6.ipynb
@@ -113,8 +113,14 @@
     "                        e_radius=1.0, e_alpha=0.5, title='{}'.format(d.job.jobcfg.key))\n",
     "    return graphs.posture_extrema(env, d['explorations'], fig=fig, alpha=1.0, radius_factor=0.5, line_factor=1.0)\n",
     "\n",
+    "\n",
+    "\n",
     "for nor_data, src_data, tgt_data in data_min_nor:\n",
-    "    graphs.show(spread(nor_data))"
+    "    zoom = graphs.posture_extrema(env, nor_data['explorations'], \n",
+    "                                  x_range=[0.0, 0.2], y_range=[0.5, 1], \n",
+    "                                  plot_width=int(80+ 0.4*(450-80)), plot_height=450,\n",
+    "                                  alpha=1.0, radius_factor=0.5, line_factor=1.0)\n",
+    "    graphs.show([[spread(nor_data), zoom]])"
    ]
   },
   {
@@ -200,6 +206,8 @@
    },
    "outputs": [],
    "source": [
+    "import bokeh.models\n",
+    "\n",
     "def arm_examples(env, examples):\n",
     "    \"\"\"Display rotated example of arm postures\"\"\"\n",
     "    fig = None\n",
@@ -217,19 +225,24 @@
     "        x_offset += max(0, -x_min) + 0.05\n",
     "\n",
     "        fig = graphs.posture_explorations(env, [e], fig=fig, x_T=x_offset, y_T=y_offset,\n",
-    "                                          plot_width=2700/3, plot_height=5400/3, grid=False,\n",
-    "                                          x_range=[0.0, 2.7], y_range=[-4.4, 1.0],\n",
+    "                                          plot_width=3800/4, plot_height=3200/4, grid=False,\n",
+    "                                          x_range=[0.0, 3.8], y_range=[-2.2, 1.0],\n",
     "                                          alpha=0.50, radius_factor=0.75)\n",
-    "        fig.xgrid.grid_line_color = None\n",
-    "        fig.axis.major_tick_out = 4\n",
+    "        \n",
     "        fig.outline_line_color = None\n",
+    "        fig.axis.major_tick_out = 4\n",
+    "        fig.axis.minor_tick_out = 0\n",
+    "        \n",
+    "        fig.xgrid.grid_line_color = None\n",
     "        fig.xaxis.axis_line_color = None\n",
     "        fig.xaxis.major_tick_line_color = None\n",
     "        fig.xaxis.major_label_text_color = None\n",
-    "        fig.axis.minor_tick_out = 0\n",
+    "        \n",
+    "        fig.yaxis.major_label_text_font_size=\"14pt\"\n",
+    "        fig.yaxis[0].ticker=bokeh.models.FixedTicker(ticks=[1, 0, -1, -2, -3])\n",
     "\n",
     "        x_offset += max(0, x_max)\n",
-    "        if x_offset > 2.5:            \n",
+    "        if x_offset > 3.5:            \n",
     "            y_offset -= 1.0\n",
     "            x_offset  = 0.025\n",
     "\n",
