Small fixes for objects ipynb files

--- a/objects/figure_19.ipynb
+++ b/objects/figure_19.ipynb
@@ -29,9 +29,9 @@
     "import dotdot\n",
     "import graphs\n",
     "\n",
-    "from fig19_cluster import rgap_k\n",
+    "from fig19a_cluster import rgap\n",
     "\n",
-    "expcfgs = rgap_k()\n",
+    "expcfgs = rgap()\n",
     "results = experiments.load_results(expcfgs, 'tcov', mask=(True, False, True))\n",
     "\n",
     "graphs.output_notebook()\n",
@@ -64,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
