--- a/objects/figure_20.ipynb
+++ b/objects/figure_20.ipynb
@@ -29,9 +29,10 @@
     "import dotdot\n",
     "import graphs\n",
     "\n",
-    "from fig20_cluster import rgap_kb\n",
+    "from fig20_cluster import rgap_crude\n",
     "\n",
-    "expcfgs = rgap_kb()\n",
+    "\n",
+    "expcfgs = rgap_crude()\n",
     "results = experiments.load_results(expcfgs, 'tcov', mask=(True, False, True))\n",
     "\n",
     "graphs.output_notebook()\n",
@@ -64,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
