Fix figure_6 zoom code

--- a/planar_arms/figure_6.ipynb
+++ b/planar_arms/figure_6.ipynb
@@ -116,6 +116,9 @@
     "\n",
     "\n",
     "for nor_data, src_data, tgt_data in data_min_nor:\n",
+    "    # zoom code\n",
+    "    env_cfg = nor_data.job.jobcfg.exploration.env\n",
+    "    env = environments.Environment.create(env_cfg)\n",
     "    zoom = graphs.posture_extrema(env, nor_data['explorations'], \n",
     "                                  x_range=[0.0, 0.2], y_range=[0.5, 1], \n",
     "                                  plot_width=int(80+ 0.4*(450-80)), plot_height=450,\n",
@@ -283,7 +286,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
