More percentile lines in figure 16

--- a/objects/figure_16.ipynb
+++ b/objects/figure_16.ipynb
@@ -36,7 +36,7 @@
     "results = experiments.load_results(expcfgs, 'tcov', mask=(True, False, True))\n",
     "\n",
     "graphs.output_notebook()\n",
-    "graphs.reuse_quantiles(results, y_max=360000)"
+    "graphs.reuse_quantiles(results, y_max=360000, src_quantiles=(0, 90, 100), tgt_quantiles=(0, 10, 100))"
    ]
   },
   {
