Add gridlines to figure 15

--- a/objects/figure_15.ipynb
+++ b/objects/figure_15.ipynb
@@ -35,7 +35,14 @@
     "data = experiments.load_explorations([expcfgs[0]], rep=0)\n",
     "\n",
     "graphs.output_notebook()\n",
-    "fig1 = graphs.reuse_coverage(data[0], milestones=(200, 500, 1000))"
+    "graphs.reuse_coverage(data[0], milestones=(200, 500, 1000),\n",
+    "                      nor=True, src=False, tgt=True, # no reuse and reuse graphs\n",
+    "                      grid=True, xgridlines=range(-600, 1401, 200),\n",
+    "                                 ygridlines=range(-400, 1601, 200))\n",
+    "graphs.reuse_coverage(data[0], milestones=(200, 500, 1000), \n",
+    "                      nor=False, src=True, tgt=False, # source graphs\n",
+    "                      grid=True, xgridlines=range(-300, 301, 100),\n",
+    "                                 ygridlines=range(-300, 301, 100))"
    ]
   },
   {
