--- a/objects/figure_18.ipynb
+++ b/objects/figure_18.ipynb
@@ -36,8 +36,8 @@
     "\n",
     "graphs.output_notebook()\n",
     "\n",
-    "graphs.reuse_perflines(results[:2], y_max=1000000)\n",
-    "graphs.reuse_perflines(results[2:], y_max= 400000)"
+    "graphs.reuse_perflines(results[:2], y_max=1000000, tight=False)\n",
+    "graphs.reuse_perflines(results[2:], y_max= 400000, tight=False)"
    ]
   },
   {
