--- a/objects/figure_14.ipynb
+++ b/objects/figure_14.ipynb
@@ -35,7 +35,8 @@
     "results = experiments.load_results(expcfgs, 'tcov', mask=(True, False, True))\n",
     "\n",
     "graphs.output_notebook()\n",
-    "graphs.reuse_quantiles(results, y_max=360000)"
+    "graphs.reuse_quantiles(results[:1], y_max=360000, src_quantiles=(0, 10, 100), tgt_quantiles=(0, 10, 100))\n",
+    "graphs.reuse_quantiles(results[1:], y_max=360000)"
    ]
   },
   {
