--- a/objects/figure_19.ipynb
+++ b/objects/figure_19.ipynb
@@ -39,6 +39,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from fig19b_cluster import rgap_h\n",
+    "\n",
+    "expcfgs = rgap_h()\n",
+    "results = experiments.load_results(expcfgs, 'tcov', mask=(True, False, True))\n",
+    "\n",
+    "graphs.output_notebook()\n",
+    "graphs.reuse_perflines(results, y_max= 360000, tight=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
