Simplified kin arm environment + polar support

--- a/planar_arms/figure_4.ipynb
+++ b/planar_arms/figure_4.ipynb
@@ -218,7 +218,7 @@
    },
    "outputs": [],
    "source": [
-    "tgt_env_name, tgt_env_cfg = envs.kin(dim=DIM, limit=150)\n",
+    "tgt_env_name, tgt_env_cfg = envs.kin(dim=DIM, limit=150, polar=True)\n",
     "tgt_env_cfg.lengths = [0.9**i for i in range(tgt_env_cfg.dim)]\n",
     "tgt_env_cfg.lengths = [s/sum(tgt_env_cfg.lengths) for s in tgt_env_cfg.lengths]\n",
     "tgt_env = environments.Environment.create(tgt_env_cfg)"
