--- a/planar_arms/figure_6.ipynb
+++ b/planar_arms/figure_6.ipynb
@@ -120,7 +120,7 @@
     "    env_cfg = nor_data.job.jobcfg.exploration.env\n",
     "    env = environments.Environment.create(env_cfg)\n",
     "    zoom = graphs.posture_extrema(env, nor_data['explorations'], \n",
-    "                                  x_range=[0.0, 0.2], y_range=[0.5, 1], \n",
+    "                                  x_range=[-0.125, 0.075], y_range=[0.5, 1], \n",
     "                                  plot_width=int(80+ 0.4*(450-80)), plot_height=450,\n",
     "                                  alpha=1.0, radius_factor=0.5, line_factor=1.0)\n",
     "    graphs.show([[spread(nor_data), zoom]])"
@@ -188,15 +188,10 @@
    },
    "outputs": [],
    "source": [
-    "def arm_width(env, m_vector):\n",
+    "def arm_width(env, m_signal):\n",
     "    \"\"\"How much lateral space a posture occupies (for screen placement)\"\"\"\n",
-    "    s_signal = env._multiarm.forward_kin(m_vector)\n",
-    "\n",
-    "    xs, ys = [0.0], [0.0]\n",
-    "    for i in range(env.cfg.dim):\n",
-    "        xs.append(s_signal['x{}'.format(i+1)])\n",
-    "        ys.append(s_signal['y{}'.format(i+1)])\n",
-    "\n",
+    "    s_signal = env.execute(m_signal)\n",
+    "    xs, ys = zip(*env.posture)\n",
     "    ys, xs = xs, ys\n",
     "    return min(xs), max(xs)"
    ]
@@ -224,7 +219,7 @@
     "        e[0]['m_signal']['j19'] -= math.degrees(math.atan2(y, x))\n",
     "        e[0]['m_signal']['j19'] = ((e[0]['m_signal']['j19']+180)%(360))-180\n",
     "\n",
-    "        x_min, x_max = arm_width(env, tools.to_vector(e[0]['m_signal'], env.m_channels))\n",
+    "        x_min, x_max = arm_width(env, e[0]['m_signal'])\n",
     "        x_offset += max(0, -x_min) + 0.05\n",
     "\n",
     "        fig = graphs.posture_explorations(env, [e], fig=fig, x_T=x_offset, y_T=y_offset,\n",
@@ -269,6 +264,7 @@
     "\n",
     "for nor_data, src_data, tgt_data in data_min_tgt:\n",
     "    env_cfg = tgt_data.job.jobcfg.exploration.env\n",
+    "    env_cfg.classname = 'environments.envs.KinArmEuclidean'\n",
     "    env = environments.Environment.create(env_cfg)\n",
     "\n",
     "    reused_commands = _reused_commands(tgt_data['explorations'])#[:50]\n",
