add collision percentage examples

--- a/objects/collision_percentages.ipynb
+++ b/objects/collision_percentages.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "def print_collisions(name, col_data):\n",
-    "    return '{}: {: 5d}/{} collisions, {:.2f}% probability'.format(\n",
+    "    return '{}: {: 5d}/{} collisions, {:.3f}% probability'.format(\n",
     "        name, col_data[0], col_data[1], 100.0*col_data[0]/col_data[1])\n",
     "\n",
     "print(print_collisions('cube     ', cube_cols))\n",
@@ -121,7 +121,9 @@
     "    \n",
     "print_proba_collision('cube     ', cube_cols,      200, n=1)\n",
     "print_proba_collision('ball     ', ball_cols,      200, n=1)\n",
+    "print_proba_collision('ball     ', ball_cols,      100, n=1)\n",
     "print_proba_collision('displaced', displaced_cols, 200, n=1)\n",
+    "print_proba_collision('displaced', displaced_cols, 100, n=1)\n",
     "print_proba_collision('pool     ', pool_cols,      300, n=1)\n",
     "print('')\n",
     "print_proba_collision('cube     ', cube_cols,      200, n=2)\n",
