Tracking provenance from cluster jobs

--- a/objects/figure_12.ipynb
+++ b/objects/figure_12.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following code was used to generate the graphs of Figure 12 of the article \"Behavioral Diversity Generation in Autonomous Exploration Through Reuse of Past Experience\" by Fabien C. Y. Benureau and Pierre-Yves Oudeyer (currently under review).\n",
+    "The following script was used to generate the graphs of Figure 12 of the article \"Behavioral Diversity Generation in Autonomous Exploration Through Reuse of Past Experience\" by Fabien C. Y. Benureau and Pierre-Yves Oudeyer.\n",
     "\n",
-    "It is distributed under the [Open Science License](http://fabien.benureau.com/openscience.html). For any questions and remarks about the code, contact [fabien.benureau@gmail.com](mailto:fabien.benureau@gmail.com)."
+    "The [full code is available](http://fabien.benureau.com/code/frontiers2016.html) and is distributed under the [Open Science License](http://fabien.benureau.com/openscience.html). For any questions, remarks or difficulties running this code, contact [fabien.benureau@gmail.com](mailto:fabien.benureau@gmail.com)."
    ]
   },
   {
@@ -36,6 +36,33 @@
     "\n",
     "graphs.output_notebook()\n",
     "graphs.reuse_quantiles(results, y_max=360000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Provenance Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cluster provenance code examines all the exploration data files of this experiment to check and compare their embedded provenance data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import provenance\n",
+    "prov_data = provenance.cluster(rmb_reuse()) # this may take a minute.\n",
+    "print(prov_data.message())"
    ]
   },
   {
