--- a/objects/collision_percentages.ipynb
+++ b/objects/collision_percentages.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following code was used to compute the collision percentages cited in the article \"Behavioral Diversity Generation in Autonomous Exploration Through Reuse of Past Experience\" by Fabien C. Y. Benureau and Pierre-Yves Oudeyer (currently under review).\n",
+    "The following code was used to compute the collision percentages cited in the article \"Behavioral Diversity Generation in Autonomous Exploration Through Reuse of Past Experience\" by Fabien C. Y. Benureau and Pierre-Yves Oudeyer.\n",
     "\n",
-    "It is distributed under the [Open Science License](http://fabien.benureau.com/openscience.html). For any questions and remarks about the code, contact [fabien.benureau@gmail.com](mailto:fabien.benureau@gmail.com)."
+    "It available [there](http://fabien.benureau.com/code/frontiers2016.html) and is distributed under the [Open Science License](http://fabien.benureau.com/openscience.html). For any questions and remarks about the code, contact [fabien.benureau@gmail.com](mailto:fabien.benureau@gmail.com)."
    ]
   },
   {
@@ -130,6 +130,33 @@
     "print_proba_collision('ball     ', ball_cols,      200, n=2)\n",
     "print_proba_collision('displaced', displaced_cols, 200, n=2)\n",
     "print_proba_collision('pool     ', pool_cols,      300, n=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Provenance Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cluster provenance code examines all the exploration data files of this experiment to check and compare their embedded provenance data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import provenance # this may take a minute or two.\n",
+    "prov_data = provenance.cluster([[cube_src_cfg, ball_src_cfg, displaced_src_cfg, pool_nor_cfg]]) \n",
+    "print(prov_data.message())"
    ]
   },
   {
