--- a/objects/figure_14.ipynb
+++ b/objects/figure_14.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following code was used to generate the graphs of Figure 14 of the article \"Behavioral Diversity Generation in Autonomous Exploration Through Reuse of Past Experience\" by Fabien C. Y. Benureau and Pierre-Yves Oudeyer (currently under review).\n",
+    "The following script was used to generate the graphs of Figure 14 of the article \"Behavioral Diversity Generation in Autonomous Exploration Through Reuse of Past Experience\" by Fabien C. Y. Benureau and Pierre-Yves Oudeyer.\n",
     "\n",
-    "It is distributed under the [Open Science License](http://fabien.benureau.com/openscience.html). For any questions and remarks about the code, contact [fabien.benureau@gmail.com](mailto:fabien.benureau@gmail.com)."
+    "The [full code is available](http://fabien.benureau.com/code/frontiers2016.html) and is distributed under the [Open Science License](http://fabien.benureau.com/openscience.html). For any questions, remarks or difficulties running this code, contact [fabien.benureau@gmail.com](mailto:fabien.benureau@gmail.com)."
    ]
   },
   {
@@ -37,6 +37,33 @@
     "graphs.output_notebook()\n",
     "graphs.reuse_quantiles(results[:1], y_max=360000, src_quantiles=(0, 10, 100), tgt_quantiles=(0, 10, 100))\n",
     "graphs.reuse_quantiles(results[1:], y_max=360000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Provenance Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cluster provenance code examines all the exploration data files of this experiment to check and compare their embedded provenance data. Note that for this experiment, the cluster jobs were run under two different code revisions: one for the first 25 repetitions, and another for 75 more. No difference impacting the experiment behavior exists between the two versions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import provenance\n",
+    "prov_data = provenance.cluster(dissimilar()) # this may take a minute.\n",
+    "print(prov_data.message())"
    ]
   },
   {
