--- a/objects/figure_15.ipynb
+++ b/objects/figure_15.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following code was used to generate the graphs of Figure 10 of the article \"Behavioral Diversity Generation in Autonomous Exploration Through Reuse of Past Experience\" by Fabien C. Y. Benureau and Pierre-Yves Oudeyer (currently under review).\n",
+    "The following script was used to generate the graphs of Figure 15 of the article \"Behavioral Diversity Generation in Autonomous Exploration Through Reuse of Past Experience\" by Fabien C. Y. Benureau and Pierre-Yves Oudeyer.\n",
     "\n",
-    "It is distributed under the [Open Science License](http://fabien.benureau.com/openscience.html). For any questions and remarks about the code, contact [fabien.benureau@gmail.com](mailto:fabien.benureau@gmail.com)."
+    "The [full code is available](http://fabien.benureau.com/code/frontiers2016.html) and is distributed under the [Open Science License](http://fabien.benureau.com/openscience.html). For any questions, remarks or difficulties running this code, contact [fabien.benureau@gmail.com](mailto:fabien.benureau@gmail.com)."
    ]
   },
   {
@@ -31,8 +31,11 @@
     "\n",
     "from fig15_cluster import pool\n",
     "\n",
+    "\n",
+    "REP = 0 # change this to display other runs (provided the data is installed).\n",
+    "\n",
     "expcfgs = pool()\n",
-    "data = experiments.load_explorations([expcfgs[0]], rep=0)\n",
+    "data = experiments.load_explorations([expcfgs[0]], rep=REP)\n",
     "\n",
     "graphs.output_notebook()\n",
     "graphs.reuse_coverage(data[0], milestones=(200, 500, 1000),\n",
@@ -43,6 +46,33 @@
     "                      nor=False, src=True, tgt=False, # source graphs\n",
     "                      grid=True, xgridlines=range(-300, 301, 100),\n",
     "                                 ygridlines=range(-300, 301, 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Provenance Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cluster provenance code examines all the exploration data files of this experiment to check and compare their embedded provenance data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import provenance\n",
+    "prov_data = provenance.cluster(pool()) # this may take a minute.\n",
+    "print(prov_data.message())"
    ]
   },
   {
