Comment for changing runs in fig10 and 15

--- a/objects/figure_15.ipynb
+++ b/objects/figure_15.ipynb
@@ -20,6 +20,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "REP = 0 # change between 0 and 100 this to display other runs (provided the data is installed)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -30,9 +41,6 @@
     "import graphs\n",
     "\n",
     "from fig15_cluster import pool\n",
-    "\n",
-    "\n",
-    "REP = 0 # change this to display other runs (provided the data is installed).\n",
     "\n",
     "expcfgs = pool()\n",
     "data = experiments.load_explorations([expcfgs[0]], rep=REP)\n",
